name:                kdmswitch
version:             0.0.0.1
-- synopsis:            
-- description:         
-- license:             
license-file:        LICENSE
-- author:              
-- maintainer:          
-- copyright:           
category:            System
build-type:          Simple
cabal-version:       >=1.8

executable kdmswitch
  main-is:           KDMSwitch.hs
  -- other-modules:       
  build-depends:     base ==4.5.*, parsec, process
